// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image circular variant render 1`] = `
<div>
  <img
    alt="Circular image"
    class="PicassoImage-circular PicassoImage-root"
    src="localhost"
  />
</div>
`;

exports[`Image default render 1`] = `
<div>
  <img
    alt="Default image"
    class="PicassoImage-root"
    src="localhost"
  />
</div>
`;
